Added parapgraph describing why for each destination

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <div class="destination-container">
             <div class="destination" id="belize">
                 <h2>Jamaica</h2>
+                    <p>Because it is beautiful</p>
             </div>
 
             <div class="destination" id="barcelona">
                 <h2>Honduras</h2>
+                    <p>Because there is a jungle</p>
             </div>
         </div>
     </div>
